New companion service & companion-requests component + many fixes

--- a/Project/Client/src/app/components/admin/admin.component.html
+++ b/Project/Client/src/app/components/admin/admin.component.html
@@ -1,6 +1,6 @@
-<h3 class="section-title">ADMINISTRATION SECTION</h3>
-<div class="container-grid">
-    <app-users-management></app-users-management>
-    <app-register></app-register>
-    <app-races-management></app-races-management>
+<h3 class="centered-text">ADMINISTRATION SECTION</h3>
+<div class="components-grid">
+    <app-users-management class="components-grid-cell"></app-users-management>
+    <app-register class="components-grid-cell"></app-register>
+    <app-races-management class="components-grid-cell"></app-races-management>
 </div>
