--- a/Project/Client/src/app/components/admin/users-management/users-management.component.html
+++ b/Project/Client/src/app/components/admin/users-management/users-management.component.html
@@ -27,56 +27,58 @@
         <div class="spinner-container" *ngIf="loading">
             <mat-spinner [diameter]="70"></mat-spinner>
         </div>
-        <mat-table [dataSource]="dataSource" *ngIf="!loading">
-            <!-- View-Action Column -->
-            <ng-container matColumnDef="View-Action">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell class="squeeze center" *matCellDef="let element">
-                    <button mat-icon-button (click)="$event.stopPropagation();viewUser(element)">
+        <div class="overflow-auto">
+            <mat-table class="fit-content center-horizontal" [dataSource]="dataSource" *ngIf="!loading">
+                <!-- View-Action Column -->
+                <ng-container matColumnDef="View-Action">
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell class="squeeze center" *matCellDef="let element">
+                        <button mat-icon-button (click)="$event.stopPropagation();viewUser(element)">
                         <mat-icon>info</mat-icon>
                     </button>
-                </td>
-            </ng-container>
+                    </td>
+                </ng-container>
 
-            <!-- Mail Column -->
-            <ng-container matColumnDef="Mail">
-                <th mat-header-cell *matHeaderCellDef> Mail </th>
-                <td mat-cell *matCellDef="let element"> {{element.mail}} </td>
-            </ng-container>
+                <!-- Mail Column -->
+                <ng-container matColumnDef="Mail">
+                    <th mat-header-cell *matHeaderCellDef> Mail </th>
+                    <td mat-cell *matCellDef="let element"> {{element.mail}} </td>
+                </ng-container>
 
-            <!-- Name Column -->
-            <ng-container matColumnDef="Name">
-                <th mat-header-cell *matHeaderCellDef> Name </th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-            </ng-container>
+                <!-- Name Column -->
+                <ng-container matColumnDef="Name">
+                    <th mat-header-cell *matHeaderCellDef> Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                </ng-container>
 
-            <!-- Surname Column -->
-            <ng-container matColumnDef="Surname">
-                <th mat-header-cell *matHeaderCellDef> Surname </th>
-                <td mat-cell *matCellDef="let element"> {{element.surname}} </td>
-            </ng-container>
+                <!-- Surname Column -->
+                <ng-container matColumnDef="Surname">
+                    <th mat-header-cell *matHeaderCellDef> Surname </th>
+                    <td mat-cell *matCellDef="let element"> {{element.surname}} </td>
+                </ng-container>
 
-            <!-- Roles Column -->
-            <ng-container matColumnDef="Roles">
-                <th mat-header-cell *matHeaderCellDef> Roles </th>
-                <td mat-cell *matCellDef="let element">
-                    <span *ngFor="let role of element.roles"> {{role}}</span>
-                </td>
-            </ng-container>
+                <!-- Roles Column -->
+                <ng-container matColumnDef="Roles">
+                    <th mat-header-cell *matHeaderCellDef> Roles </th>
+                    <td mat-cell *matCellDef="let element">
+                        <span *ngFor="let role of element.roles"> {{role}}</span>
+                    </td>
+                </ng-container>
 
-            <!-- Edit-Action Column -->
-            <ng-container matColumnDef="Edit-Action">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell class="squeeze center-vertical" *matCellDef="let element">
-                    <button *ngIf="notSysAdmin(element)" mat-icon-button (click)="$event.stopPropagation();editUser(element)">
+                <!-- Edit-Action Column -->
+                <ng-container matColumnDef="Edit-Action">
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell class="squeeze center-vertical" *matCellDef="let element">
+                        <button *ngIf="notSysAdmin(element)" mat-icon-button (click)="$event.stopPropagation();editUser(element)">
                         <mat-icon>edit</mat-icon>
                     </button>
-                </td>
-            </ng-container>
+                    </td>
+                </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="getDisplayedColumns()"></tr>
-            <tr mat-row *matRowDef="let row; columns: getDisplayedColumns()" [ngClass]="{ 'mobile': isMobile}" (click)="isMobile || viewUser(row)"></tr>
-        </mat-table>
+                <tr mat-header-row *matHeaderRowDef="getDisplayedColumns()"></tr>
+                <tr mat-row *matRowDef="let row; columns: getDisplayedColumns()" [ngClass]="{ 'mobile': isMobile}" (click)="isMobile || viewUser(row)"></tr>
+            </mat-table>
+        </div>
         <mat-paginator [pageSizeOptions]="[5,10]" [pageSize]=10 [length]="nUsers"></mat-paginator>
     </mat-card>
 </div>
