--- a/Project/Client/src/app/components/common.css
+++ b/Project/Client/src/app/components/common.css
@@ -1,13 +1,20 @@
-.container-grid {
+.components-grid {
     display: flex;
     flex-flow: wrap;
     align-items: top;
+    margin-left: auto;
+    margin-right: auto;
     justify-content: center;
 }
 
-.container-grid * {
+.components-grid-cell {
     text-align: center;
-    margin: 15px 15px 15px 15px!important;
+    padding: 15px 15px 15px 15px!important;
+    overflow: auto;
+}
+
+.components-grid-cell * {
+    overflow: auto;
 }
 
 .new-line {
