--- a/Project/Client/src/app/components/companion/companion.component.html
+++ b/Project/Client/src/app/components/companion/companion.component.html
@@ -1,1 +1,5 @@
-<h1>COMPANION</h1>
+<h3 class="centered-text">COMPANION SECTION</h3>
+<div class="components-grid">
+    <app-companion-pending-requests class="components-grid-cell"></app-companion-pending-requests>
+    <app-races-companion class="components-grid-cell"></app-races-companion>
+</div>
