--- a/Project/Client/src/app/components/welcome/welcome.component.html
+++ b/Project/Client/src/app/components/welcome/welcome.component.html
@@ -5,21 +5,27 @@
     <img src="../../../assets/LooneyTunesCityWithOBJ.png" alt="" />
 </div>
 
-<div class="container-grid info-container">
-    <mat-card class="container-grid-cell info">
-        <h3>Cosa e' il Pedibus</h3>
-        <img src="../../../assets/fila.png" alt="" />
-        <p>Il Pedibus è un’iniziativa per accompagnare i bambini a piedi a scuola, sotto la supervisione di un adulto. Conviviale, sano, economico ed ecologico, il Pedibus è un’invenzione che cambia la vita!</p>
-    </mat-card>
-    <mat-card class="container-grid-cell info">
-        <h3>Come Funziona?</h3>
-        <img src="../../../assets/bus.png" alt="" />
-        <p>Come un vero e proprio autobus, il Pedibus rispetta un orario, segue un percorso e ha i propri conducenti. L’unica differenza è che si tratta di un autobus a piedi, organizzato e gestito dai genitori.</p>
-    </mat-card>
-    <mat-card class="container-grid-cell info">
-        <h3>Le nostre linee</h3>
-        <img src="../../../assets/map.jpg" alt="" />
-        <p>Le nostre linee coprono quasi tutto il territorio della citta di Torino. Se fossero necessarie altre Linee possono essere indicate agli amministratori.</p>
-        <button mat-raised-button color="accent" routerLink="./lines">Scopri</button>
-    </mat-card>
+<div class="components-grid">
+    <div class="components-grid-cell">
+        <mat-card class="info">
+            <h3>Cosa e' il Pedibus</h3>
+            <img src="../../../assets/fila.png" alt="" />
+            <p>Il Pedibus è un’iniziativa per accompagnare i bambini a piedi a scuola, sotto la supervisione di un adulto. Conviviale, sano, economico ed ecologico, il Pedibus è un’invenzione che cambia la vita!</p>
+        </mat-card>
+    </div>
+    <div class="components-grid-cell">
+        <mat-card class="info">
+            <h3>Come Funziona?</h3>
+            <img src="../../../assets/bus.png" alt="" />
+            <p>Come un vero e proprio autobus, il Pedibus rispetta un orario, segue un percorso e ha i propri conducenti. L’unica differenza è che si tratta di un autobus a piedi, organizzato e gestito dai genitori.</p>
+        </mat-card>
+    </div>
+    <div class="components-grid-cell">
+        <mat-card class="info">
+            <h3>Le nostre linee</h3>
+            <img src="../../../assets/map.jpg" alt="" />
+            <p>Le nostre linee coprono quasi tutto il territorio della citta di Torino. Se fossero necessarie altre Linee possono essere indicate agli amministratori.</p>
+            <button mat-raised-button color="accent" routerLink="./lines">Scopri</button>
+        </mat-card>
+    </div>
 </div>
