--- a/Project/Client/src/styles.css
+++ b/Project/Client/src/styles.css
@@ -5,6 +5,7 @@ body {
     height: auto;
     min-height: 100vh;
     font-family: Nunito;
+    min-width: 360px;
 }
 
 .mat-badge-content {
@@ -2856,9 +2857,43 @@ th.mat-header-cell {
 
 td.mat-cell:first-of-type {
     padding-left: 0px !important;
-    ;
 }
 
 .center-vertical {
     vertical-align: middle;
+}
+
+.center-horizontal {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.centered-text {
+    text-align: center !important;
+}
+
+.right {
+    right: 0;
+}
+
+.left {
+    left: 0;
+}
+
+.overflow-auto {
+    overflow: auto;
+}
+
+.mat-tab-link-container {
+    flex-grow: unset !important;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.green {
+    color: rgb(43, 167, 2);
+}
+
+.red {
+    color: red;
 }
