Added setting component

--- a/Project/Client/src/app/components/settings/settings.component.html
+++ b/Project/Client/src/app/components/settings/settings.component.html
@@ -1,1 +1,6 @@
-SETTINGS
+<h3 class="section-title">SETTING SECTION</h3>
+<div class="container-grid">
+    <app-my-account></app-my-account>
+    <app-children-setting></app-children-setting>
+    <app-contacts-setting></app-contacts-setting>
+</div>
