Fixing Settings section layout

--- a/Project/Client/src/app/components/settings/settings.component.html
+++ b/Project/Client/src/app/components/settings/settings.component.html
@@ -1,6 +1,6 @@
-<h3 class="section-title">SETTING SECTION</h3>
-<div class="container-grid">
-    <app-my-account></app-my-account>
-    <app-children-setting></app-children-setting>
-    <app-contacts-setting></app-contacts-setting>
+<h3 class="section-title">SETTINGS SECTION</h3>
+<div class="components-grid">
+    <app-my-account class="components-grid-cell"></app-my-account>
+    <app-children-setting class="components-grid-cell"></app-children-setting>
+    <app-contacts-setting class="components-grid-cell"></app-contacts-setting>
 </div>
