New implementation of IsMobile service + fixes

--- a/Project/Client/src/app/components/welcome/welcome.component.html
+++ b/Project/Client/src/app/components/welcome/welcome.component.html
@@ -2,7 +2,7 @@
 
 <div class="image-container" [ngClass]="{ 'mobile-head-img' : isMobile }">
     <!--<h1 class="title">Welcome to pedibus</h1>-->
-    <img src="../../../assets/LooneyTunesCityWithOBJ.png" alt="" />
+    <img src="../../../assets/LooneyTunesCityWithOBJ.png" />
 </div>
 
 <div class="components-grid">
