--- a/Project/Client/src/app/components/app/app.component.css
+++ b/Project/Client/src/app/components/app/app.component.css
@@ -55,6 +55,8 @@ h1.app-name {
     /* This fills the remaining space, by using flexbox. 
        Every toolbar row uses a flexbox row layout. */
     flex: 1 1 auto;
+    height: inherit;
+    height: -webkit-fill-available;
 }
 
 ::ng-deep .mat-button-focus-overlay {
