--- a/Project/Client/src/app/components/app/app.component.html
+++ b/Project/Client/src/app/components/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="main-container" [class.is-mobile]="mobileQuery.matches">
+<div class="main-container" [class.is-mobile]="isMobile">
 
     <mat-toolbar color="primary" class="app-toolbar">
         <button mat-icon-button (click)="snav.toggle()">
@@ -6,26 +6,26 @@
         </button>
         <h1 class="app-name" routerLink="/">Pedibus</h1>
         <span class="fill-remaining-space"></span>
-        <button *ngIf="!isLogged && !mobileQuery.matches" mat-button routerLink="/auth/login" routerOutlet="content">
+        <button *ngIf="!isLogged && !isMobile" mat-button routerLink="/auth/login" routerOutlet="content">
             <span>Login</span>
         </button>
-        <button *ngIf="isLogged && !mobileQuery.matches" mat-button routerLink="/auth/logout">
+        <button *ngIf="isLogged && !isMobile" mat-button routerLink="/auth/logout">
             <span>Logout</span>
         </button>
     </mat-toolbar>
 
-    <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 60 : 0">
-        <mat-sidenav opened="true" class="sidenav" #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="true" fixedTopGap="56">
+    <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="isMobile ? 60 : 0">
+        <mat-sidenav opened="isMobile? false:true" class="sidenav" #snav [mode]="isMobile ? 'over' : 'side'" [fixedInViewport]="true" fixedTopGap="56">
             <mat-nav-list>
                 <a mat-list-item *ngIf="isLogged" routerLink="./home">Home</a>
                 <a mat-list-item *ngIf="isLogged && isAdmin" routerLink="./admin">Admin</a>
                 <a mat-list-item *ngIf="isLogged && isCompanion" routerLink="./companion">Companion</a>
                 <a mat-list-item routerLink="./lines">Lines</a>
                 <a mat-list-item *ngIf="isLogged" routerLink="./settings">Settings</a>
-                <a *ngIf="!isLogged && mobileQuery.matches" mat-list-item routerLink="/auth/login">
+                <a *ngIf="!isLogged && isMobile" mat-list-item routerLink="/auth/login">
                     <span>Login</span>
                 </a>
-                <a *ngIf="isLogged && mobileQuery.matches" mat-list-item routerLink="/auth/logout">
+                <a *ngIf="isLogged && isMobile" mat-list-item routerLink="/auth/logout">
                     <span>Logout</span>
                 </a>
             </mat-nav-list>
