Added Lines map and other minor fix

--- a/Project/Client/src/app/components/lines/lines.component.html
+++ b/Project/Client/src/app/components/lines/lines.component.html
@@ -1,1 +1,4 @@
-LINES
+<h3 class="centered-text">OUR LINES</h3>
+<div class="components-grid">
+    <app-view-map class="components-grid-cell expanded"></app-view-map>
+</div>
