Fixed settings layout

--- a/Project/Client/src/app/components/settings/children-setting/children-setting.component.html
+++ b/Project/Client/src/app/components/settings/children-setting/children-setting.component.html
@@ -1,6 +1,6 @@
 <div class="padded-content">
     <mat-card class="compact-card centered">
-        <h3>My Children</h3>
+        <p>My Children</p>
         <table *ngIf="children && children.length>0">
             <thead>
                 <tr>
