--- a/Project/Client/src/app/components/settings/contacts-setting/contacts-setting.component.html
+++ b/Project/Client/src/app/components/settings/contacts-setting/contacts-setting.component.html
@@ -1,6 +1,6 @@
 <div class="padded-content">
     <mat-card class="compact-card centered">
-        <h3>My Contacts</h3>
+        <p>My Contacts</p>
         <table *ngIf="contacts && contacts.length>0">
             <thead>
                 <tr>
