Implemented new Companion Requests Management Component

--- a/Project/Client/src/app/components/admin/admin.component.html
+++ b/Project/Client/src/app/components/admin/admin.component.html
@@ -1,6 +1,7 @@
 <h3 class="centered-text">ADMINISTRATION SECTION</h3>
 <div class="components-grid">
-    <app-users-management class="components-grid-cell"></app-users-management>
+    <app-companion-requests class="components-grid-cell"></app-companion-requests>
     <app-register class="components-grid-cell"></app-register>
     <app-races-management class="components-grid-cell"></app-races-management>
+    <app-users-management class="components-grid-cell"></app-users-management>
 </div>
