--- a/Project/Client/src/app/components/admin/register/register.component.html
+++ b/Project/Client/src/app/components/admin/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="padded-content">
     <mat-card class="compact-card centered">
-        <p>Register User</p>
+        <p>Register a New User</p>
         <div class="admin-content">
             <form [formGroup]="form" (ngSubmit)="register()">
                 <mat-form-field>
