--- a/Project/Client/src/app/components/admin/races-management/races-management.component.html
+++ b/Project/Client/src/app/components/admin/races-management/races-management.component.html
@@ -1,7 +1,12 @@
 <div class="padded-content">
     <mat-card class="compact-card scroll">
 
-        <p>Manage races</p>
+        <div>
+            <p class=" inline-grid">Manage Races</p>
+            <button mat-raised-button mat-icon-button class="add-button inline-grid" (click)="openAddRacesDialog()">
+                <mat-icon class="green">add</mat-icon>
+            </button>
+        </div>
         <div class="spinner-container" *ngIf="loading">
             <mat-spinner [diameter]="70"></mat-spinner>
         </div>
@@ -29,7 +34,7 @@
         <!-- From Date selection -->
         <mat-form-field class="races-selection">
             <mat-label>From Date</mat-label>
-            <input matInput [matDatepicker]="pickerFrom" [(ngModel)]="fromDateSelected" disabled>
+            <input matInput [matDatepicker]="pickerFrom" [(ngModel)]="fromDateSelected">
             <mat-datepicker-toggle matSuffix [for]="pickerFrom"></mat-datepicker-toggle>
             <mat-datepicker #pickerFrom disabled="false" [startAt]="fromDateSelected"></mat-datepicker>
         </mat-form-field>
@@ -37,12 +42,13 @@
         <!-- To Date selection -->
         <mat-form-field class="races-selection">
             <mat-label>To Date</mat-label>
-            <input matInput [matDatepicker]="pickerTo" [(ngModel)]="toDateSelected" disabled>
+            <input matInput [matDatepicker]="pickerTo" [(ngModel)]="toDateSelected">
             <mat-datepicker-toggle matSuffix [for]="pickerTo"></mat-datepicker-toggle>
             <mat-datepicker #pickerTo disabled="false" [startAt]="toDateSelected"></mat-datepicker>
         </mat-form-field>
 
-        <button mat-raised-button [disabled]="lineSelected==null || directionSelected==null" (click)="search()">Search</button>
+        <button mat-raised-button [disabled]="lineSelected==null || directionSelected==null"
+            (click)="search()">Search</button>
         <div class="overflow-auto">
             <mat-table class="fit-content center-horizontal" [dataSource]="dataSource" matSort>
 
@@ -61,19 +67,23 @@
                 <!-- Date Column -->
                 <ng-container matColumnDef="Date">
                     <th class="center-vertical" mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-                    <td class="center-vertical" mat-cell *matCellDef="let element"> {{element.date.toDateString()}} </td>
+                    <td class="center-vertical" mat-cell *matCellDef="let element"> {{element.date.toDateString()}}
+                    </td>
                 </ng-container>
 
                 <!-- Passengers Column -->
                 <ng-container matColumnDef="Passengers">
                     <th class="center-vertical centered-text" mat-header-cell *matHeaderCellDef> Passengers </th>
-                    <td mat-cell class="center-vertical centered-text" *matCellDef="let element"> {{element.passengers.length}} </td>
+                    <td mat-cell class="center-vertical centered-text" *matCellDef="let element">
+                        {{element.passengers.length}} </td>
                 </ng-container>
 
                 <!-- Companions Column -->
                 <ng-container matColumnDef="Companions">
-                    <th class="squeeze center-vertical centered-text" mat-header-cell *matHeaderCellDef> Companions </th>
-                    <td mat-cell class="squeeze center-vertical centered-text" *matCellDef="let element"> {{element.companions.length}} </td>
+                    <th class="squeeze center-vertical centered-text" mat-header-cell *matHeaderCellDef> Companions
+                    </th>
+                    <td mat-cell class="squeeze center-vertical centered-text" *matCellDef="let element">
+                        {{element.companions.length}} </td>
                 </ng-container>
 
                 <!-- Edit-Action Column -->
@@ -81,13 +91,14 @@
                     <th class="center-vertical" mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell class="squeeze center-vertical" *matCellDef="let element">
                         <button mat-icon-button (click)="$event.stopPropagation(); removeRace(element)">
-                        <mat-icon>delete_outline</mat-icon>
-                    </button>
+                            <mat-icon>delete_outline</mat-icon>
+                        </button>
                     </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="getDisplayedColumns()"></tr>
-                <tr mat-row *matRowDef="let row; columns: getDisplayedColumns()" [ngClass]="{ 'mobile': isMobile}" (click)="viewRace(row)"></tr>
+                <tr mat-row *matRowDef="let row; columns: getDisplayedColumns()" [ngClass]="{ 'mobile': isMobile}"
+                    (click)="viewRace(row)"></tr>
             </mat-table>
         </div>
     </mat-card>
