--- a/Project/Client/src/app/components/admin/races-management/view-race-dialog/view-race.dialog.html
+++ b/Project/Client/src/app/components/admin/races-management/view-race-dialog/view-race.dialog.html
@@ -13,11 +13,11 @@
             </thead>
             <tbody>
                 <tr>
-                    <td> {{data.race.lineName}}</td>
-                    <td> {{data.race.direction}}</td>
-                    <td> {{data.race.date.toLocaleDateString()}}</td>
-                    <td> {{data.race.date.toLocaleTimeString()}}</td>
-                    <td> {{data.race.raceState}}</td>
+                    <td>{{data.race.lineName}}</td>
+                    <td>{{data.race.direction}}</td>
+                    <td>{{data.race.date.toLocaleDateString()}}</td>
+                    <td>{{data.race.date.toLocaleTimeString()}}</td>
+                    <td>{{data.race.raceState}}</td>
                 </tr>
             </tbody>
         </table>
@@ -26,7 +26,6 @@
     <div class="row">
         <div>
             <h3 class="title">Companions</h3>
-
             <table>
                 <thead>
                     <tr>
@@ -39,10 +38,12 @@
                 <tbody>
                     <tr *ngFor="let companion of data.race.companions">
                         <td>{{companion.userDetails.mail}} </td>
-                        <td>{{companion.initialStop.name}},
-                            {{getTime(data.race.date.getTime()+companion.initialStop.delayInMillis)}} </td>
-                        <td>{{companion.finalStop.name}},
-                            {{getTime(data.race.date.getTime()+companion.finalStop.delayInMillis)}} </td>
+                        <td>
+                            {{companion.initialStop.name}},{{getTime(data.race.date.getTime()+companion.initialStop.delayInMillis)}}
+                        </td>
+                        <td>
+                            {{companion.finalStop.name}},{{getTime(data.race.date.getTime()+companion.finalStop.delayInMillis)}}
+                        </td>
                         <td>{{companion.state}} </td>
                     </tr>
                 </tbody>
@@ -64,19 +65,17 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let passenger of data.race.passengers">
-                        <td> {{passenger.childDetails.name}}</td>
-                        <td> {{passenger.stopReserved.name}}</td>
-                        <td> {{passenger.stopTaken.name}}</td>
-                        <td> {{passenger.stopDelivered.name}}</td>
-
+                        <td>{{passenger.childDetails.name}}</td>
+                        <td>{{passenger.stopReserved.name}}</td>
+                        <td>{{passenger.stopTaken.name}}</td>
+                        <td>{{passenger.stopDelivered.name}}</td>
                         <td *ngIf="passenger.IsReserved">
-                            <mat-icon class="green-icon">check</mat-icon>
+                            <mat-icon class="green">check</mat-icon>
                         </td>
                         <td *ngIf="!passenger.IsReserved">
-                            <mat-icon class="red-icon">clear</mat-icon>
+                            <mat-icon class="red">clear</mat-icon>
                         </td>
-
-                        <td> {{passenger.state}}</td>
+                        <td>{{passenger.state}}</td>
                     </tr>
                 </tbody>
             </table>
@@ -86,5 +85,4 @@
     <div mat-dialog-actions>
         <button mat-button (click)="onCancel()" cdkFocusInitial>Cancel</button>
     </div>
-
 </div>
