--- a/Project/Client/src/app/components/home/home.component.html
+++ b/Project/Client/src/app/components/home/home.component.html
@@ -1,1 +1,4 @@
-<h1>HOME</h1>
+<h3 class="centered-text">HOME</h3>
+<div class="components-grid">
+    <app-companion-today-lines *ngIf="isCompanion" class="components-grid-cell"></app-companion-today-lines>
+</div>
