--- a/Project/Client/src/app/components/admin/races-management/races-management.component.html
+++ b/Project/Client/src/app/components/admin/races-management/races-management.component.html
@@ -55,7 +55,7 @@
                 <!-- LineName Column -->
                 <ng-container matColumnDef="LineName">
                     <th class="center-vertical" mat-header-cell *matHeaderCellDef mat-sort-header> LineName </th>
-                    <td class="center-vertical" mat-cell *matCellDef="let element"> {{element.lineName}} </td>
+                    <td class="center-vertical" mat-cell *matCellDef="let element"> {{element.line.name}} </td>
                 </ng-container>
 
                 <!-- Direction Column -->
