--- a/Project/Client/src/app/components/dialogs/view-race-dialog/view-race.dialog.html
+++ b/Project/Client/src/app/components/dialogs/view-race-dialog/view-race.dialog.html
@@ -13,7 +13,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>{{data.race.lineName}}</td>
+                    <td>{{data.race.line.name}}</td>
                     <td>{{data.race.direction}}</td>
                     <td>{{data.race.date.toLocaleDateString()}}</td>
                     <td>{{data.race.date.toLocaleTimeString()}}</td>
