--- a/Project/Client/src/app/components/companion/races-companion/races-companion.component.html
+++ b/Project/Client/src/app/components/companion/races-companion/races-companion.component.html
@@ -1,7 +1,7 @@
 <div class="padded-content">
     <mat-card class="compact-card scroll">
 
-        <p>Manage races</p>
+        <p>Give Availability to Races</p>
         <div class="spinner-container" *ngIf="loading">
             <mat-spinner [diameter]="70"></mat-spinner>
         </div>
@@ -42,7 +42,8 @@
             <mat-datepicker #pickerTo disabled="false" [startAt]="toDateSelected"></mat-datepicker>
         </mat-form-field>
 
-        <button mat-raised-button [disabled]="lineSelected==null || directionSelected==null" (click)="search()">Search</button>
+        <button mat-raised-button [disabled]="lineSelected==null || directionSelected==null"
+            (click)="search()">Search</button>
 
         <div class="overflow-auto">
             <mat-table class="center-horizontal fit-content" [dataSource]="dataSource" matSort>
@@ -50,7 +51,7 @@
                 <!-- LineName Column -->
                 <ng-container matColumnDef="LineName">
                     <th class="center-vertical" mat-header-cell *matHeaderCellDef mat-sort-header> LineName </th>
-                    <td class="center-vertical" mat-cell *matCellDef="let element"> {{element.lineName}} </td>
+                    <td class="center-vertical" mat-cell *matCellDef="let element"> {{element.line.name}} </td>
                 </ng-container>
 
                 <!-- Direction Column -->
@@ -62,7 +63,8 @@
                 <!-- Date Column -->
                 <ng-container matColumnDef="Date">
                     <th class="center-vertical" mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-                    <td class="center-vertical" mat-cell *matCellDef="let element"> {{element.date.toDateString()}} </td>
+                    <td class="center-vertical" mat-cell *matCellDef="let element"> {{element.date.toDateString()}}
+                    </td>
                 </ng-container>
 
                 <!-- Passengers Column -->
@@ -85,13 +87,14 @@
                     <th class="center-vertical" mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell class="squeeze center-vertical" *matCellDef="let element">
                         <button mat-icon-button (click)="$event.stopPropagation(); giveAvailability(element)">
-                        <mat-icon>person_add</mat-icon>
-                    </button>
+                            <mat-icon>person_add</mat-icon>
+                        </button>
                     </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="getDisplayedColumns()"></tr>
-                <tr mat-row *matRowDef="let row; columns: getDisplayedColumns()" [ngClass]="{ 'mobile': isMobile}"></tr>
+                <tr mat-row *matRowDef="let row; columns: getDisplayedColumns()" [ngClass]="{ 'mobile': isMobile}"
+                    (click)="viewRace(row)"></tr>
             </mat-table>
         </div>
     </mat-card>
