--- a/Project/Client/src/app/components/companion/races-companion/races-companion.component.html
+++ b/Project/Client/src/app/components/companion/races-companion/races-companion.component.html
@@ -29,7 +29,7 @@
         <!-- From Date selection -->
         <mat-form-field class="races-selection">
             <mat-label>From Date</mat-label>
-            <input matInput [matDatepicker]="pickerFrom" [(ngModel)]="fromDateSelected" disabled>
+            <input matInput [matDatepicker]="pickerFrom" [(ngModel)]="fromDateSelected">
             <mat-datepicker-toggle matSuffix [for]="pickerFrom"></mat-datepicker-toggle>
             <mat-datepicker #pickerFrom disabled="false" [startAt]="fromDateSelected"></mat-datepicker>
         </mat-form-field>
@@ -37,7 +37,7 @@
         <!-- To Date selection -->
         <mat-form-field class="races-selection">
             <mat-label>To Date</mat-label>
-            <input matInput [matDatepicker]="pickerTo" [(ngModel)]="toDateSelected" disabled>
+            <input matInput [matDatepicker]="pickerTo" [(ngModel)]="toDateSelected">
             <mat-datepicker-toggle matSuffix [for]="pickerTo"></mat-datepicker-toggle>
             <mat-datepicker #pickerTo disabled="false" [startAt]="toDateSelected"></mat-datepicker>
         </mat-form-field>
