--- a/Project/Client/src/app/components/dialogs/view-race-dialog/view-race.dialog.html
+++ b/Project/Client/src/app/components/dialogs/view-race-dialog/view-race.dialog.html
@@ -69,11 +69,11 @@
                         <td>{{passenger.stopReserved.name}}</td>
                         <td>{{passenger.stopTaken.name}}</td>
                         <td>{{passenger.stopDelivered.name}}</td>
-                        <td *ngIf="passenger.IsReserved">
-                            <mat-icon class="green">check</mat-icon>
+                        <td *ngIf="passenger.reserved" class="center-vertical centered-text">
+                            <mat-icon class="green opacity50">check</mat-icon>
                         </td>
-                        <td *ngIf="!passenger.IsReserved">
-                            <mat-icon class="red">clear</mat-icon>
+                        <td *ngIf="!passenger.reserved" class="center-vertical centered-text">
+                            <mat-icon class="red opacity50">clear</mat-icon>
                         </td>
                         <td>{{passenger.state}}</td>
                     </tr>
