--- a/Project/Client/src/styles.css
+++ b/Project/Client/src/styles.css
@@ -2897,3 +2897,8 @@ td.mat-cell:first-of-type {
 .red {
     color: red;
 }
+
+.opacity50{
+    opacity: 0.5;
+    filter: alpha(opacity=50); /* For IE8 and earlier */
+}
