--- a/Project/Client/src/styles.css
+++ b/Project/Client/src/styles.css
@@ -2902,3 +2902,7 @@ td.mat-cell:first-of-type {
     opacity: 0.5;
     filter: alpha(opacity=50); /* For IE8 and earlier */
 }
+
+.grey{
+    color: rgb(173, 173, 173);
+}
