--- a/Project/Client/src/app/components/account/account.component.html
+++ b/Project/Client/src/app/components/account/account.component.html
@@ -1,6 +1,6 @@
-<h3 class="section-title">SETTINGS SECTION</h3>
+<h3 class="section-title">ACCOUNT SECTION</h3>
 <div class="components-grid">
-    <app-my-account class="components-grid-cell"></app-my-account>
+    <app-me class="components-grid-cell"></app-me>
     <app-children-setting class="components-grid-cell"></app-children-setting>
     <app-contacts-setting class="components-grid-cell"></app-contacts-setting>
 </div>
