--- a/Project/Client/src/app/components/app/app.component.html
+++ b/Project/Client/src/app/components/app/app.component.html
@@ -15,15 +15,14 @@
     </mat-toolbar>
 
     <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="isMobile ? 60 : 0">
-        <mat-sidenav opened="isMobile? false:true" class="sidenav" #snav [mode]="isMobile ? 'over' : 'side'"
-            [fixedInViewport]="true" fixedTopGap="56">
+        <mat-sidenav opened="isMobile? false:true" class="sidenav" #snav [mode]="isMobile ? 'over' : 'side'" [fixedInViewport]="true" fixedTopGap="56">
             <mat-nav-list>
                 <a mat-list-item *ngIf="isLogged" routerLink="./home">Home</a>
                 <a mat-list-item *ngIf="isLogged && isAdmin" routerLink="./admin">Admin</a>
                 <a mat-list-item *ngIf="isLogged && isCompanion" routerLink="./companion">Companion</a>
                 <a mat-list-item *ngIf="isLogged" routerLink="./parent">Parent</a>
                 <a mat-list-item routerLink="./lines">Lines</a>
-                <a mat-list-item *ngIf="isLogged" routerLink="./settings">Settings</a>
+                <a mat-list-item *ngIf="isLogged" routerLink="./account">My Account</a>
                 <a *ngIf="!isLogged && isMobile" mat-list-item routerLink="/auth/login">
                     <span>Login</span>
                 </a>
